# MVCLab

Django/: pyproject.toml
Django/djangotutorial/mysite/: settings.py  urls.py
Django/djangotutorial/polls/: admin.py  models.py  tests.py  views.py
Django/djangotutorial/polls/migrations/: 0001_initial.py
Django/djangotutorial/polls/static/polls/: style.css
Django/djangotutorial/polls/templates/admin/: base_site.html
Django/djangotutorial/polls/templates/polls/: detail.html  index.html  results.html
DotNet/: .gitignore
DotNet/MvcMovie/: MvcMovie.csproj  MvcMovie.sln  Program.cs
DotNet/MvcMovie/Controllers/: MoviesController.cs
DotNet/MvcMovie/Data/: MvcMovieContext.cs
DotNet/MvcMovie/Migrations/: 20260326134058_InitialCreate.Designer.cs  MvcMovieContextModelSnapshot.cs
DotNet/MvcMovie/Properties/: launchSettings.json
DotNet/MvcMovie/Views/Movies/: Details.cshtml  Index.cshtml
Project/: README.md
